app/assets/stylesheets/custom.scss
@import "bootstrap-sprockets";
@import "bootstrap";
#searchbar {
  min-width: 500px;
}
#nav-collapse {
  padding-top: 10px;
}
.navbar-toggle {
  margin-top: 16px;
}
.navbar-header {
  min-height: 70px;
}
#logo {
  height: inherit;
}
#create-btn-div {
  padding-bottom: 20px;
}
.template-img {
  height: 150px !important;
}
.thumbnail {
}

